[gd_scene load_steps=8 format=2]

[ext_resource path="res://default_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/GUI.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Alphakind.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/pause_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/options_menu.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="GUI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="score_label" type="Label" parent="."]
margin_left = 40.0
margin_top = 40.0
theme = ExtResource( 1 )
text = "Score: 0"

[node name="lose_screen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="lose_screen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="YouDied!" type="Label" parent="lose_screen"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 0.5
anchor_bottom = 0.25
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "You Died!"
align = 1
valign = 1

[node name="lose_score_label" type="Label" parent="lose_screen"]
anchor_left = 0.5
anchor_top = 0.35
anchor_right = 0.5
anchor_bottom = 0.35
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Score:"
align = 1
valign = 1

[node name="play_again" type="Button" parent="lose_screen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
text = "Play Again"

[node name="VBoxContainer" type="VBoxContainer" parent="lose_screen"]
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="high_scores" type="Label" parent="lose_screen/VBoxContainer"]
margin_right = 192.0
margin_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "High Scores:"
align = 1
valign = 1

[node name="high_score1" type="Label" parent="lose_screen/VBoxContainer"]
margin_top = 34.0
margin_right = 192.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="high_score2" type="Label" parent="lose_screen/VBoxContainer"]
margin_top = 68.0
margin_right = 192.0
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="high_score3" type="Label" parent="lose_screen/VBoxContainer"]
margin_top = 102.0
margin_right = 192.0
margin_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="high_score4" type="Label" parent="lose_screen/VBoxContainer"]
margin_top = 136.0
margin_right = 192.0
margin_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="high_score5" type="Label" parent="lose_screen/VBoxContainer"]
margin_top = 170.0
margin_right = 192.0
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="pause_menu" parent="." instance=ExtResource( 4 )]
visible = false

[node name="options_menu" parent="." instance=ExtResource( 5 )]
visible = false

[connection signal="pressed" from="lose_screen/play_again" to="." method="_on_play_again_pressed"]
